force-app/main/default/objects/GiftTransaction/fields/Fee__c.field-meta.xml
<CustomField>
    <fullName>Fee__c</fullName>
    <label>Fee</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>