force-app/main/default/objects/GiftTransaction/fields/Stripe_Event_Id__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Event_Id__c</fullName>
    <label>Stripe Event Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>